crates/wit-compiler/src/queries/snapshots/wit_compiler__queries__lowering__tests__lower_package_with_docs.snap
---
source: crates/wit-compiler/src/queries/lowering.rs
info:
  src: "/// This is a package.\npackage wasi:filesystem@1.2.3;"
  ast: "(source_file (slash_comment) package: (package_decl (fully_qualified_package_name package: (package_name (identifier)) path: (package_path (identifier)) version: (semver))))"
---
Package {
    decl: Some(
        PackageDeclaration {
            docs: None,
            package: wasi,
            path: [
                filesystem,
            ],
            version: Some(
                1.2.3,
            ),
        },
    ),
    worlds: [],
    interfaces: [],
}
