crates/wit-compiler/src/queries/snapshots/wit_compiler__queries__lowering__tests__refer_to_user_defined_type.snap
---
source: crates/wit-compiler/src/queries/lowering.rs
info:
  src: "interface i {\n            record r {}\n            type x = list<r>;\n        }"
  ast: "(source_file (top_level_item (interface_item name: (identifier) items: (interface_items (typedef_item (record_item name: (identifier)))) items: (interface_items (typedef_item (type_item name: (identifier) ty: (ty (list (ty (user_defined_type name: (identifier)))))))))))"
---
Package {
    decl: None,
    worlds: {},
    interfaces: {
        InterfaceIndex(0): Interface {
            name: i,
            docs: None,
            items: [
                Record(
                    Record {
                        name: r,
                        index: RecordIndex(0),
                        docs: None,
                        fields: [],
                    },
                ),
                TypeAlias(
                    TypeAlias {
                        name: x,
                        index: TypeAliasIndex(0),
                        docs: None,
                        ty: List(
                            UserDefinedType(
                                ItemReference {
                                    file: FilePath(
                                        refer_to_user_defined_type.wit,
                                    ),
                                    scope: Interface(
                                        InterfaceIndex(0),
                                    ),
                                    item: Record(
                                        RecordIndex(0),
                                    ),
                                },
                            ),
                        ),
                    },
                ),
            ],
        },
    },
}
