crates/wit-compiler/src/queries/snapshots/wit_compiler__queries__lowering__tests__result_with_empty_ok.snap
---
source: crates/wit-compiler/src/queries/lowering.rs
info:
  src: "interface i { type x = result<_>; }"
  ast: "(source_file (top_level_item (interface_item name: (identifier) items: (interface_items (typedef_item (type_item name: (identifier) ty: (ty (result))))))))"
---
Package {
    decl: None,
    worlds: {},
    interfaces: {
        InterfaceIndex(0): Interface {
            name: i,
            docs: None,
            items: [
                TypeAlias(
                    TypeAlias {
                        name: x,
                        index: TypeAliasIndex(0),
                        docs: None,
                        ty: Result {
                            ok: None,
                            err: None,
                        },
                    },
                ),
            ],
        },
    },
}
