crates/wit-compiler/src/queries/snapshots/wit_compiler__queries__lowering__tests__syntax_errors_are_emitted.snap
---
source: crates/wit-compiler/src/queries/lowering.rs
info:
  src: "#$"
  ast: "(source_file (ERROR (UNEXPECTED '#')))"
---
[
    SyntaxError(
        SyntaxError {
            rule: Some(
                "source_file",
            ),
            location: Location {
                filename: FilePath(
                    Id {
                        value: 1,
                    },
                ),
                range: Range {
                    start_byte: 0,
                    end_byte: 2,
                    start_point: Point {
                        row: 0,
                        column: 0,
                    },
                    end_point: Point {
                        row: 0,
                        column: 2,
                    },
                },
            },
        },
    ),
    SyntaxError(
        SyntaxError {
            rule: None,
            location: Location {
                filename: FilePath(
                    Id {
                        value: 1,
                    },
                ),
                range: Range {
                    start_byte: 0,
                    end_byte: 2,
                    start_point: Point {
                        row: 0,
                        column: 0,
                    },
                    end_point: Point {
                        row: 0,
                        column: 2,
                    },
                },
            },
        },
    ),
]
