crates/wit-compiler/src/queries/snapshots/wit_compiler__queries__lowering__tests__tuple_with_single_element.snap
---
source: crates/wit-compiler/src/queries/lowering.rs
info:
  src: "interface i { type x = tuple<string>; }"
  ast: "(source_file (top_level_item (interface_item name: (identifier) items: (interface_items (typedef_item (type_item name: (identifier) ty: (ty (tuple (ty (builtins))))))))))"
---
Package {
    decl: None,
    worlds: {},
    interfaces: {
        InterfaceIndex(0): Interface {
            name: i,
            docs: None,
            items: [
                TypeAlias(
                    TypeAlias {
                        name: x,
                        index: TypeAliasIndex(0),
                        docs: None,
                        ty: Tuple(
                            [
                                Builtin(
                                    String,
                                ),
                            ],
                        ),
                    },
                ),
            ],
        },
    },
}
